--- a/main.tex
+++ b/main.tex
@@ -99,8 +99,8 @@
 \subsection*{}
 \vspace{-3em}
 
-\setlength{\columnsep}{1.5cm}
-\columnratio{0.48}[0.47]
+\setlength{\columnsep}{1.7cm}
+\columnratio{0.47}[0.46]
 \begin{paracol}{2}
 \hbadness5000
 
@@ -110,9 +110,6 @@
 % 0.9,0.9,0.9 -- 0.8,0.8,0.8
 
 
-\footnotesize
-{
-
 \small
 \section*{Experience}
 
@@ -120,12 +117,12 @@
 \begin{tabular}{r| p{0.6\textwidth} c}
     \cvevent{8/2023 - current}{SAP LeanIX}{Working Student}{Bonn, Germany}{integrated OpenAPI Specification evaluation tools for continuous integration pipelines. Contributed to the LeanIX EAM product as part of an agile engineering team. Learned to work with numerous technologies used in large microservice architectures}{img/leanix_logo.jpg} \\
 
-    \cvevent{2019}{University of Bonn }{Student assistant}{Bonn, Germany}{Administration and maintenance of institute for philosophy websites and IT equipment.}{img/uni_bonn_logo.jpg} \\
+    \cvevent{2022-2023}{University of Bonn }{Student assistant}{Bonn, Germany}{Administration and maintenance of institute for philosophy websites and IT equipment.}{img/uni_bonn_logo.jpg} \\
 
-    \cvevent{2016--2017}{Academy of Sciences and Humanities}{Student Assistant}{Berlin, Germany}{Transcription of ancient Hebrew and Arabic texts. XML annotation of academic text for cross-referenced usage in a database. Proofreading of articles.}{img/bbaw_logo.jpg}
+    \cvevent{2017-2018}{Academy of Sciences and Humanities}{Student Assistant}{Berlin, Germany}{Transcription of ancient Hebrew and Arabic texts. XML annotation of academic text for cross-referenced usage in a database. Proofreading of articles.}{img/bbaw_logo.jpg}
 \end{tabular}
 
-\vspace{2em}
+\vspace{4em}
 
 \begin{minipage}[t]{\leftcolwidth}
     \section*{Skills}
@@ -137,18 +134,15 @@
         Webdevelopment & Scrum \\
         Angular & LaTeX\\
         \textbf{Python} & Data analysis and Visualization \\
-        basic machine learning &  Clustering\\
+        Basic machine learning &  Clustering\\
     \end{tabular}
     \bigskip
     
 \end{minipage}\hfill
 
-% Make a visual skills section cloud like or like a tech stack
-
 
 \vspace{4em}
 \end{minipage}
-}
 %-----------------------------------------------------------
 \switchcolumn
 
@@ -156,18 +150,18 @@
 \section*{Education}
 
 \begin{tabular}{r| p{0.6\textwidth} c}
-    \cvevent{2019 - 2024}{Bonn-Rhein-Sieg University of Applied Sciences (H-BRS)}{B.Sc Computer Science}{Bonn, Germany}{Finishing Computer Science degree in November 2024 with high to very high grades throughout the whole program. Specialized in Bioinformatics and Data Science. Thesis topic: Relevance of OpenAPI Linter Rules for Specification Quality.}{img/hbrs_logo.jpg} \\
+    \cvevent{2019 - 2024}{Bonn-Rhein-Sieg University of Applied Sciences (H-BRS)}{B.Sc Computer Science}{Bonn, Germany}{Finishing Computer Science degree in November 2024 with very good grades throughout the whole program. Specialized in Bioinformatics and Data Science. Thesis topic: Relevance of OpenAPI Linter Rules for Specification Quality.}{img/hbrs_logo.jpg} \\
 
-    \cvevent{2015 - 2019}{Freie Universität zu Berlin}{B.A. History and Culture of the Middle East}{Berlin, Germany}{Language centered degree with long time abroad language courses in Egypt, Israel and Jordan. Thesis was written about gender-specific variations in the Arabic dialect of Amman, Jordan}{img/fu_logo.jpg} \\
+    \cvevent{2015 - 2019}{Freie Universität zu Berlin}{B.A. History and Culture of the Middle East}{Berlin, Germany}{Language centered degree with long time abroad language courses in Egypt, Israel and Jordan. Thesis was written about gender-specific variations in the Arabic dialect of Amman, Jordan}{img/fu_logo.png} \\
 \end{tabular}
 
 \end{minipage}
 
-\vspace{2em}
+\vspace{3em}
 
 \begin{minipage}[t]{\leftcolwidth}
   \section*{Awards}
-  \begin{tabular}{>{\footnotesize\bfseries}r >{\footnotesize}p{0.55\textwidth}}
+  \begin{tabular}{>{\small\bfseries}r >{\small}p{0.70\textwidth}}
       2023 & Deutschlandstipendium -  Scholarship for ambitious and talented students \\
       2018 & Scholarship for a full Semester of intensive Arabic language courses at the German Jordanian University in Amman, Jordan.\\
       2018 & PROMOS -  Scholarship for an intensive Hebrew summer school at the Ben Gurion University of the Negev \\
@@ -186,16 +180,16 @@
 
 \begin{minipage}[t]{\rightcolwidth}
 \section*{Volunteering}
-\begin{tabular}{>{\footnotesize\bfseries}r >{\footnotesize}p{0.7\textwidth}}
+\begin{tabular}{>{\small\bfseries}r >{\small}p{0.7\textwidth}}
     2014 & After graduating high school I volunteered for nine months in Kibbutz Ein Hashlosha in Israel. During my time I worked mostly in agriculture and landscaping but also in the local garage where I helped maintaining the tractors of the Kibbutz. \\
     
 \end{tabular}
 \bigskip
 
 \section*{Hobbies}
-\begin{tabular}{>{\footnotesize\bfseries}r >{\footnotesize}p{0.6\textwidth}}
+\begin{tabular}{>{\small\bfseries}r >{\small}p{0.7\textwidth}}
     Rowing & I row since I am ten years old and participated in countless competitions including the german national sprint league. \\
-
+    Cooking & My great passion is to cook. My favorite cuisines are Mediterranean and Asian. I make the best Hummus
 \end{tabular}
 \end{minipage}
 
