remove profile pic

--- a/main.tex
+++ b/main.tex
@@ -49,14 +49,14 @@
 
 \begin{minipage}[t]{0.21\textwidth}
 \vspace{0pt} % Trick for alignment
-\includegraphics[width=\textwidth]{img/paul.png}\hspace{1em}
+%\includegraphics[width=\textwidth]{img/paul.png}\hspace{1em}
 \end{minipage}
 \hfill
-\begin{minipage}[t]{0.77\textwidth}
+\begin{minipage}[t]{1\textwidth}
 \vspace{0pt} % Trick for alignment
 \begin{shaded*}
 
-\begin{minipage}[t]{0.4\textwidth}
+\begin{minipage}[t]{0.47\textwidth}
 \vspace{0pt} % Trick for alignment
 % here the fancy font can be taken out by removing \LobsterTwo
 {\par\centering\huge{Paul Brenker}} \\[0.3cm]
@@ -77,8 +77,8 @@
 \end{spacing}
 \vspace{4pt} % Trick for alignment
 \end{minipage}\hfill
-\begin{minipage}[t]{0.55\textwidth}
-\vspace{0pt} % Trick for alignment
+\begin{minipage}[t]{0.46\textwidth}
+\vspace{29pt} % Trick for alignment
 \faPhone~ +49 173 5287524 \\
 \faAt~ \protect\url{paul.brenker@gmail.com} \\
 
@@ -115,7 +115,7 @@
 
 \begin{minipage}[t]{\leftcolwidth}
 \begin{tabular}{r| p{0.6\textwidth} c}
-    \cvevent{8/2023 - current}{SAP LeanIX}{Working Student}{Bonn, Germany}{integrated OpenAPI Specification evaluation tools for continuous integration pipelines. Contributed to the LeanIX EAM product as part of an agile engineering team. Learned to work with numerous technologies used in large microservice architectures}{img/leanix_logo.jpg} \\
+    \cvevent{8/2023 - current}{SAP LeanIX}{Working Student}{Bonn, Germany}{integrated OpenAPI Specification evaluation tools for continuous integration pipelines. Contributed to the LeanIX EAM product as part of an agile engineering team. Learned to work with numerous technologies used in microservice architectures}{img/leanix_logo.jpg} \\
 
     \cvevent{2022-2023}{University of Bonn }{Student assistant}{Bonn, Germany}{Administration and maintenance of institute for philosophy websites and IT equipment.}{img/uni_bonn_logo.jpg} \\
 
@@ -168,15 +168,9 @@
   \end{tabular}
   \bigskip
   
-  \end{minipage}\hfill
+\end{minipage}\hfill
 
-
-
-
-
-
-\vspace{2em}
-
+\bigskip
 
 \begin{minipage}[t]{\rightcolwidth}
 \section*{Volunteering}
@@ -189,7 +183,7 @@
 \section*{Hobbies}
 \begin{tabular}{>{\small\bfseries}r >{\small}p{0.7\textwidth}}
     Rowing & I row since I am ten years old and participated in countless competitions including the german national sprint league. \\
-    Cooking & My great passion is to cook. My favorite cuisines are Mediterranean and Asian. I make the best Hummus
+    Cooking & My great passion is to cook. My favorite cuisines are Mediterranean and Asian.
 \end{tabular}
 \end{minipage}
 
