--- a/main.tex
+++ b/main.tex
@@ -133,7 +133,7 @@
         \textbf{Linux} & PostgreSQL \\
         Webdevelopment & Scrum \\
         Angular & LaTeX\\
-        \textbf{Python} & Data analysis and Visualization \\
+        \textbf{Python} & Data Analysis \& Visualization \\
         Basic machine learning &  Clustering\\
     \end{tabular}
     \bigskip
@@ -210,5 +210,4 @@
 }
 \end{center}
 \end{minipage}
-
 \end{document}
