--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass{modernsimplecv}
+\documentclass{style/modernsimplecv}
 % try out different fonts: classic, fira, raleway, chivo
 \usepackage[utf8]{inputenc}
 \usepackage[top=2cm, bottom=2cm, outer=0cm, inner=0cm, margin=1cm, a4paper]{geometry}
